<resources>
    <string name="app_name">TimeUpgrader</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <array name="reward_points">
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>50</item>
    </array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Account">Account</string>
    <string name="theme">Theme</string>
    <string name="help">Help</string>
    <string name="achievement">Achievement</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="syncFrom">Sync from cloud database</string>
    <string name="syncTo">Sync to cloud database</string>
    <string name="choose_date_or_time">Choose Date or Time:</string>
    <string name="Icon">Icon</string>
    <string name="ChangePassword">ChangePassword</string>
    <string name="Nickname">Nickname: NickName</string>
    <string name="NewUserName">NewUserName</string>
    <string name="actname">ActName</string>
    <string name="actduration">ActDuration</string>
    <string name="doNotAskAgain">Don\'t ask again</string>
    <string name="firebase_path">location</string>
</resources>
