<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAccountManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/settings"
            android:layout_below="@id/btnAccountManagement" />

        <Button
            android:id="@+id/btnAchievement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/achievement"
            android:layout_below="@id/btnSettings" />

        <Button
            android:id="@+id/btnTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/theme"
            android:layout_below="@id/btnAchievement" />

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help"
            android:layout_below="@id/btnTheme" />

        <Button
            android:id="@+id/btnSyncFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/syncFrom"
            android:layout_below="@id/btnHelp" />

        <Button
            android:id="@+id/btnSyncTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/syncTo"
            android:layout_below="@id/btnSyncFrom" />

    </RelativeLayout>

</ScrollView>