<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
=======
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> 913f20de584e5a27cfb7230046806b645355119c
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f25b1a"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">
        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone"
            tools:layout_editor_absoluteX="362dp"
            tools:layout_editor_absoluteY="16dp" />


    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:text="E-mail:"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLogin"/>

    <EditText
        android:id="@+id/etUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
<<<<<<< HEAD
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textUserEmail"/>

    <TextView
        android:id="@+id/textUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:text="Password:"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/etUserEmail"/>

=======
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />
>>>>>>> 913f20de584e5a27cfb7230046806b645355119c
    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
<<<<<<< HEAD
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/textUserPassword"/>
=======
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:targetApi="o" />
>>>>>>> 913f20de584e5a27cfb7230046806b645355119c

    <Button
        android:id="@+id/btnUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="Login"
        app:layout_constraintTop_toBottomOf="@+id/etUserPassword"/>

</android.support.constraint.ConstraintLayout>
=======
        android:text="@string/login" />
</LinearLayout>
>>>>>>> 913f20de584e5a27cfb7230046806b645355119c
